# KyberPipe

./: .gitignore  Cargo.toml  README.md  instructions.md
.cargo/: config.toml
.github/workflows/: ci.yml
android-app/: README.md  build-jni.sh  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/org/kyberpipe/client/: MainActivity.kt  QrNative.kt
android-app/app/src/main/java/org/kyberpipe/client/components/: BottomNavigationBar.kt  ClipboardTab.kt  FileManagerTab.kt  NotificationsTab.kt  OverviewTab.kt  PairingInputSection.kt  QrCodeScannerView.kt  SettingsTab.kt
android-app/app/src/main/java/org/kyberpipe/client/receiver/: NotificationHook.kt  SmsReceiver.kt
android-app/app/src/main/java/org/kyberpipe/client/security/: BiometricAuthManager.kt  KeyStoreManager.kt
android-app/app/src/main/java/org/kyberpipe/client/service/: KyberTileService.kt  MdnsBeaconListener.kt  PipeService.kt  ReverseSyncServer.kt  SensorDriver.kt  WifiDirectManager.kt
android-app/app/src/main/java/org/kyberpipe/client/utils/: NetworkHelper.kt  NotificationStore.kt  PermissionHelper.kt  SettingsManager.kt
android-app/app/src/main/java/uniffi/core_crypto/: core_crypto.kt
android-app/app/src/main/java/uniffi/kyberpipe/: kyberpipe.kt
android-app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
core-crypto/: Cargo.toml  README.md  build.rs
core-crypto/docs/: formal_verification_spec.spthy
core-crypto/fuzz/: Cargo.toml
core-crypto/fuzz/fuzz_targets/: fuzz_packet_decode.rs
core-crypto/src/: crypto.rs  error.rs  kyberpipe.udl  lib.rs  network.rs  packets.rs  qr_scanner.rs  telemetry.rs
desktop-app/: README.md  package-lock.json  package.json  pnpm-lock.yaml
desktop-app/src/: App.vue
desktop-app/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: browser_bridge.rs  commands.rs  executor.rs  lib.rs  portal.rs  state.rs
desktop-app/src/components/: AutomationManager.vue  ClipboardManager.vue  ConnectivityManager.vue  Dashboard.vue  FileManager.vue  NotificationCenter.vue  SettingsPanel.vue  Sidebar.vue
docs/: index.html  interactive_wasm_spec.md
flatpak/: io.github.brilliafy.kyberpipe.yaml  org.kyberpipe.KyberPipe.yaml  org.kyberpipe.Kyberpipe.yaml
kyberpipe-cli/: Cargo.toml
kyberpipe-cli/src/: main.rs
scripts/: ci-local.sh
