[package]
name = "kyberpipe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustix = { version = "0.38", features = ["termios"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.core-crypto]
path = "../core-crypto"
