[package]
name = "core-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.core-crypto]
path = ".."

[[bin]]
name = "fuzz_packet_decode"
path = "fuzz_targets/fuzz_packet_decode.rs"
test = false
doc = false
