[package]
name = "desktop-app"
version = "0.1.0"
description = "Kyberpipe Desktop Node (PQC & Flatpak Portal Engine)"
authors = ["Kyberpipe Team"]
edition = "2021"

[lib]
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core-crypto = { path = "../../core-crypto" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
ashpd = "0.9"
boa_engine = "0.19"
wasmtime = "22.0"
arboard = "3.4"
notify-rust = "4.11"
keyring = "2.1"
tracing = "0.1"


